--- a/functions/package.json
+++ b/functions/package.json
@@ -14,12 +14,14 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "axios": "^0.19.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "firebase-admin": "^8.6.0",
     "firebase-functions": "^3.3.0"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/cors": "^2.8.6",
     "firebase-functions-test": "^0.1.6",
     "tslint": "^5.12.0",
