--- a/functions/package.json
+++ b/functions/package.json
@@ -20,6 +20,7 @@
     "express": "^4.17.1",
     "firebase-admin": "^9.2.0",
     "firebase-functions": "^3.11.0",
+    "geocodio-library-node": "^1.3.3",
     "geolib": "^3.3.1",
     "lodash": "^4.17.21"
   },
