--- a/package.json
+++ b/package.json
@@ -11,19 +11,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.1.0",
-    "@angular/cdk": "^11.2.12",
-    "@angular/common": "~11.1.0",
-    "@angular/compiler": "~11.1.0",
-    "@angular/core": "~11.1.0",
-    "@angular/fire": "^6.1.4",
+    "@angular/animations": "~11.2.14",
+    "@angular/cdk": "^11.2.13",
+    "@angular/common": "~11.2.14",
+    "@angular/compiler": "~11.2.14",
+    "@angular/core": "~11.2.14",
+    "@angular/fire": "^6.1.5",
     "@angular/flex-layout": "^11.0.0-beta.33",
-    "@angular/forms": "~11.1.0",
-    "@angular/material": "^11.2.12",
-    "@angular/platform-browser": "~11.1.0",
-    "@angular/platform-browser-dynamic": "~11.1.0",
-    "@angular/router": "~11.1.0",
-    "@angular/service-worker": "~11.1.0",
+    "@angular/forms": "~11.2.14",
+    "@angular/material": "^11.2.13",
+    "@angular/platform-browser": "~11.2.14",
+    "@angular/platform-browser-dynamic": "~11.2.14",
+    "@angular/router": "~11.2.14",
+    "@angular/service-worker": "~11.2.14",
+    "@ecodev/fab-speed-dial": "~7.0.0",
     "dayjs": "^1.10.5",
     "firebase": "^7.0 || ^8.0",
     "ngx-material-timepicker": "^5.5.3",
@@ -35,11 +36,11 @@
     "@angular-devkit/architect": ">= 0.900 < 0.1200",
     "@angular-devkit/build-angular": "~0.1101.1",
     "@angular/cli": "~11.1.1",
-    "@angular/compiler-cli": "~11.1.0",
+    "@angular/compiler-cli": "~11.2.14",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
-    "firebase-tools": "^8.0.0",
+    "firebase-tools": "^9.12.1",
     "fuzzy": "^0.1.3",
     "inquirer": "^6.2.2",
     "inquirer-autocomplete-prompt": "^1.0.1",
