--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ecodev/fab-speed-dial": "~7.0.0",
     "dayjs": "^1.10.5",
     "firebase": "^7.0 || ^8.0",
+    "humanize-duration-ts": "^2.1.1",
     "ngx-material-timepicker": "^5.5.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
