--- a/package.json
+++ b/package.json
@@ -11,33 +11,33 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.2.13",
-    "@angular/cdk": "^12.2.13",
-    "@angular/common": "~12.2.13",
-    "@angular/compiler": "~12.2.13",
-    "@angular/core": "~12.2.13",
-    "@angular/fire": "~7.0.0",
-    "@angular/flex-layout": "^12.0.0-beta.35",
-    "@angular/forms": "~12.2.13",
-    "@angular/material": "^12.2.13",
-    "@angular/platform-browser": "~12.2.13",
-    "@angular/platform-browser-dynamic": "~12.2.13",
-    "@angular/router": "~12.2.13",
-    "@angular/service-worker": "~12.2.13",
-    "@ecodev/fab-speed-dial": "~9.0.0",
+    "@angular/animations": "~13.4.0",
+    "@angular/cdk": "^13.3.9",
+    "@angular/common": "~13.4.0",
+    "@angular/compiler": "~13.4.0",
+    "@angular/core": "~13.4.0",
+    "@angular/fire": "~7.6.1",
+    "@angular/flex-layout": "^13.0.0-beta.38",
+    "@angular/forms": "~13.4.0",
+    "@angular/material": "^13.3.9",
+    "@angular/platform-browser": "~13.4.0",
+    "@angular/platform-browser-dynamic": "~13.4.0",
+    "@angular/router": "~13.4.0",
+    "@angular/service-worker": "~13.4.0",
+    "@ecodev/fab-speed-dial": "^10.0.0",
     "dayjs": "^1.10.5",
     "firebase": "^9.4.0",
     "humanize-duration-ts": "^2.1.1",
     "ngx-material-timepicker": "^5.5.3",
-    "rxjs": "~6.6.0",
+    "rxjs": "~7.5.7",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "0.1202.13",
-    "@angular-devkit/build-angular": "~12.2.13",
-    "@angular/cli": "~12.2.13",
-    "@angular/compiler-cli": "~12.2.13",
+    "@angular-devkit/architect": "0.1303.11",
+    "@angular-devkit/build-angular": "~13.3.11",
+    "@angular/cli": "~13.3.11",
+    "@angular/compiler-cli": "~13.4.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
@@ -56,6 +56,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.3.5"
+    "typescript": "~4.6.4"
   }
 }
