chore: update @angular/flex-layout to version 13.0.0-beta.38

--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
     "@angular/compiler": "~13.4.0",
     "@angular/core": "~13.4.0",
     "@angular/fire": "~7.0.0",
-    "@angular/flex-layout": "^12.0.0-beta.35",
+    "@angular/flex-layout": "^13.0.0-beta.38",
     "@angular/forms": "~13.4.0",
     "@angular/material": "^12.2.13",
     "@angular/platform-browser": "~13.4.0",
     "@angular/platform-browser-dynamic": "~13.4.0",
     "@angular/router": "~13.4.0",
     "@angular/service-worker": "~13.4.0",
-    "@ecodev/fab-speed-dial": "~9.0.0",
+    "@ecodev/fab-speed-dial": "^10.0.0",
     "dayjs": "^1.10.5",
     "firebase": "^9.4.0",
     "humanize-duration-ts": "^2.1.1",
