--- a/angular.json
+++ b/angular.json
@@ -60,8 +60,8 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                  "maximumWarning": "1mb",
+                  "maximumError": "1.5mb"
                 },
                 {
                   "type": "anyComponentStyle",
@@ -136,6 +136,5 @@
         }
       }
     }
-  },
-  "defaultProject": "beer"
+  }
 }
