--- a/package.json
+++ b/package.json
@@ -5,8 +5,15 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:prod": "ng build --configuration=production",
+    "test": "ng test",
+    "test:ci": "ng test --watch=false --browsers=ChromeHeadless --code-coverage",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "deploy": "npm run build:prod && firebase deploy",
+    "deploy:functions": "firebase deploy --only functions",
+    "serve:local": "firebase emulators:start",
+    "analyze": "npm run build:prod && npx webpack-bundle-analyzer dist/stats.json"
   },
   "private": true,
   "dependencies": {
