--- a/package.json
+++ b/package.json
@@ -17,34 +17,34 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.2.10",
-    "@angular/cdk": "^15.2.9",
-    "@angular/common": "^15.2.10",
-    "@angular/compiler": "^15.2.10",
-    "@angular/core": "^15.2.10",
-    "@angular/fire": "^7.6.1",
-    "@angular/forms": "^15.2.10",
-    "@angular/material": "^15.2.9",
-    "@angular/platform-browser": "^15.2.10",
-    "@angular/platform-browser-dynamic": "^15.2.10",
-    "@angular/router": "^15.2.10",
-    "@angular/service-worker": "^15.2.10",
-    "@ecodev/fab-speed-dial": "^12.0.0",
+    "@angular/animations": "^16.0.0",
+    "@angular/cdk": "^16.0.0",
+    "@angular/common": "^16.0.0",
+    "@angular/compiler": "^16.0.0",
+    "@angular/core": "^16.0.0",
+    "@angular/fire": "^16.0.0",
+    "@angular/forms": "^16.0.0",
+    "@angular/material": "^16.0.0",
+    "@angular/platform-browser": "^16.0.0",
+    "@angular/platform-browser-dynamic": "^16.0.0",
+    "@angular/router": "^16.0.0",
+    "@angular/service-worker": "^16.0.0",
+    "@ecodev/fab-speed-dial": "^14.0.0",
     "dayjs": "^1.10.5",
     "firebase": "^9.4.0",
     "humanize-duration-ts": "^2.1.1",
-    "ngx-material-timepicker": "^5.5.3",
-    "rxjs": "~7.5.7",
+    "ngx-material-timepicker": "^13.1.1",
+    "rxjs": "^7.4.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.11.3"
+    "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "0.1502.11",
-    "@angular-devkit/build-angular": "^15.2.11",
-    "@angular/cli": "^15.2.11",
-    "@angular/compiler-cli": "^15.2.10",
+    "@angular-devkit/architect": "0.1600.0",
+    "@angular-devkit/build-angular": "^16.0.0",
+    "@angular/cli": "^16.0.0",
+    "@angular/compiler-cli": "^16.0.0",
     "@types/node": "^18.15.0",
-    "firebase-tools": "^9.12.1",
-    "typescript": "~4.9.5"
+    "firebase-tools": "^12.0.0",
+    "typescript": "~5.0.0"
   }
 }
