--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,9 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "es2020",
+    "target": "ES2022",
     "module": "es2020",
+    "skipLibCheck": true, // Temp solution that need to be removed when angular fire is updated
     "lib": [
       "es2018",
       "dom"
