feat: Enhance app initialization and analytics tracking
- Implemented app metadata setup in AppComponent with title and meta tags.
- Added analytics event logging for app initialization and page views.
- Integrated service worker updates with periodic checks and notifications.
- Introduced notification permission requests and foreground message handling.

refactor: Update HomeComponent for improved state management

- Migrated to Angular v16 signals for state management in HomeComponent.
- Enhanced loading and error handling for brewery data retrieval.
- Implemented notification setup and handling for Firebase Cloud Messaging.
- Improved brewery data filtering logic and added retry functionality.

style: Revamp HomeComponent UI and styles

- Redesigned HTML structure for better accessibility and responsiveness.
- Enhanced SCSS styles for loading, error, and brewery display states.
- Improved toolbar and card styles for a modern look and feel.

chore: Remove unused MaterialModule and SharedModule

- Deleted MaterialModule and SharedModule as their functionality is now integrated directly into HomeModule.

--- a/angular.json
+++ b/angular.json
@@ -29,6 +29,11 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "aot": true,
+            "allowedCommonJsDependencies": [
+              "dayjs",
+              "dayjs/plugin/duration",
+              "dayjs/plugin/relativeTime"
+            ],
             "assets": [
               "src/favicon.ico",
               "src/assets",
@@ -65,8 +70,8 @@
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "2kb",
-                  "maximumError": "4kb"
+                  "maximumWarning": "35kb",
+                  "maximumError": "50kb"
                 }
               ],
               "serviceWorker": true,
