chore: update package.json with new linting and auditing scripts; add Angular ESLint dependencies
fix: update admin component HTML for strict equality checks and safe navigation

refactor: use inject for dependency injection in alert, auth, brewery, and reviews dialog components

fix: update timeline dialog component for safe navigation and improved error handling

chore: update TypeScript configuration with stricter options and remove TSLint

refactor: remove TSLint configuration file as part of migration to ESLint

--- a/angular.json
+++ b/angular.json
@@ -101,6 +101,15 @@
             "browserTarget": "beer:build"
           }
         },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": [
+              "src/**/*.ts",
+              "src/**/*.html"
+            ]
+          }
+        },
         "e2e": {
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
