--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,22 @@ Thumbs.db
 
 firebase-debug.log
 .firebase
+
+# Environment files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# ESLint cache
+.eslintcache
+
+# Storybook build outputs
+.out
+.storybook-out
+storybook-static
+
+# Temporary folders
+*.tmp
+*.temp
