chore: upgrade Angular and related dependencies to version 17.x
- Updated Angular packages to version 17.x in package.json.
- Updated Firebase tools and TypeScript versions.
- Refactored styles.scss to use the new Angular Material theming API.
- Updated variables.scss to align with the new theming structure.

--- a/angular.json
+++ b/angular.json
@@ -87,10 +87,10 @@
           },
           "configurations": {
             "production": {
-              "browserTarget": "beer:build:production"
+              "buildTarget": "beer:build:production"
             },
             "development": {
-              "browserTarget": "beer:build:development"
+              "buildTarget": "beer:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -98,7 +98,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "beer:build"
+            "buildTarget": "beer:build"
           }
         },
         "lint": {
