--- a/package.json
+++ b/package.json
@@ -18,41 +18,41 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.0.0",
-    "@angular/cdk": "^16.0.0",
-    "@angular/common": "^16.0.0",
-    "@angular/compiler": "^16.0.0",
-    "@angular/core": "^16.0.0",
-    "@angular/fire": "^16.0.0",
-    "@angular/forms": "^16.0.0",
-    "@angular/material": "^16.0.0",
-    "@angular/platform-browser": "^16.0.0",
-    "@angular/platform-browser-dynamic": "^16.0.0",
-    "@angular/router": "^16.0.0",
-    "@angular/service-worker": "^16.0.0",
+    "@angular/animations": "^17.3.12",
+    "@angular/cdk": "^17.3.10",
+    "@angular/common": "^17.3.12",
+    "@angular/compiler": "^17.3.12",
+    "@angular/core": "^17.3.12",
+    "@angular/fire": "^17.1.0",
+    "@angular/forms": "^17.3.12",
+    "@angular/material": "^17.3.10",
+    "@angular/platform-browser": "^17.3.12",
+    "@angular/platform-browser-dynamic": "^17.3.12",
+    "@angular/router": "^17.3.12",
+    "@angular/service-worker": "^17.3.12",
     "dayjs": "^1.11.13",
     "firebase": "^9.4.0",
     "humanize-duration-ts": "^2.1.1",
     "ngx-material-timepicker": "^13.1.1",
     "rxjs": "^7.4.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.13.0"
+    "zone.js": "^0.14.10"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "0.1600.0",
-    "@angular-devkit/build-angular": "^16.0.0",
+    "@angular-devkit/architect": "0.1703.17",
+    "@angular-devkit/build-angular": "^17.3.17",
     "@angular-eslint/builder": "20.1.1",
     "@angular-eslint/eslint-plugin": "^20.1.1",
     "@angular-eslint/eslint-plugin-template": "20.1.1",
     "@angular-eslint/schematics": "20.1.1",
     "@angular-eslint/template-parser": "20.1.1",
-    "@angular/cli": "^16.0.0",
-    "@angular/compiler-cli": "^16.0.0",
+    "@angular/cli": "^17.3.17",
+    "@angular/compiler-cli": "^17.3.12",
     "@types/node": "^18.15.0",
     "@typescript-eslint/eslint-plugin": "7.11.0",
     "@typescript-eslint/parser": "7.11.0",
     "eslint": "8.57.1",
-    "firebase-tools": "^12.0.0",
-    "typescript": "~5.0.0"
+    "firebase-tools": "^13.35.1",
+    "typescript": "~5.4.0"
   }
 }
