--- a/functions/package.json
+++ b/functions/package.json
@@ -2,41 +2,50 @@
   "name": "functions",
   "scripts": {
     "lint": "eslint --ext .ts .",
+    "lint:fix": "eslint --ext .ts . --fix",
     "build": "tsc",
+    "build:watch": "tsc --watch",
     "serve": "npm run build && firebase emulators:start --only functions",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
+    "logs": "firebase functions:log",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "engines": {
-    "node": "16"
+    "node": "20"
   },
   "main": "lib/index.js",
   "dependencies": {
-    "axios": "^0.26.1",
-    "cheerio": "^1.0.0-rc.10",
+    "axios": "^1.7.7",
+    "cheerio": "^1.0.0",
     "cors": "^2.8.5",
-    "dayjs": "^1.11.1",
-    "express": "^4.17.3",
-    "firebase-admin": "^10.0.2",
-    "firebase-functions": "^3.20.1",
+    "dayjs": "^1.11.13",
+    "express": "^4.21.0",
+    "firebase-admin": "^12.5.0",
+    "firebase-functions": "^6.0.1",
     "geocodio-library-node": "^1.4.0",
-    "geolib": "^3.3.3",
+    "geolib": "^3.3.4",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.13",
-    "@types/geolib": "^2.0.23",
-    "@types/lodash": "^4.14.181",
-    "@typescript-eslint/eslint-plugin": "^5.19.0",
-    "@typescript-eslint/parser": "^5.19.0",
-    "eslint": "^8.13.0",
+    "@tsconfig/node20": "^20.1.4",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.13",
+    "@types/lodash": "^4.17.7",
+    "@types/node": "^20.16.5",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
+    "eslint": "^8.57.0",
     "eslint-config-google": "^0.14.0",
-    "eslint-plugin-import": "^2.26.0",
-    "firebase-functions-test": "^0.3.3",
-    "typescript": "^4.6.3"
+    "eslint-plugin-import": "^2.30.0",
+    "firebase-functions-test": "^3.3.0",
+    "jest": "^29.7.0",
+    "rimraf": "^6.0.1",
+    "ts-jest": "^29.2.5",
+    "typescript": "5.5.4"
   },
   "private": true
 }
