--- a/.firebaserc
+++ b/.firebaserc
@@ -1,14 +1,36 @@
 {
-  "projects": {
-    "default": "blastoise-5d78e"
-  },
-  "targets": {
-    "blastoise-5d78e": {
-      "hosting": {
-        "beer": [
-          "blastoise-5d78e"
-        ]
+  "hosting": {
+    "target": "beer",
+    "public": "dist",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "/api/**",
+        "function": {
+          "functionId": "endpoints",
+          "region": "us-central1"
+        }
+      },
+      {
+        "source": "**",
+        "destination": "/index.html"
       }
+    ]
+  },
+  "functions": [
+    {
+      "source": "functions",
+      "codebase": "default",
+      "ignore": [
+        "node_modules",
+        ".git",
+        "firebase-debug.log",
+        "firebase-debug.*.log"
+      ]
     }
-  }
+  ]
 }
