--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --hmr --configuration=development",
     "build": "ng build",
     "build:prod": "ng build --configuration=production",
     "lint": "ng lint",
@@ -16,36 +16,36 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.3.12",
-    "@angular/cdk": "^17.3.10",
-    "@angular/common": "^17.3.12",
-    "@angular/compiler": "^17.3.12",
-    "@angular/core": "^17.3.12",
-    "@angular/fire": "^17.1.0",
-    "@angular/forms": "^17.3.12",
-    "@angular/material": "^17.3.10",
-    "@angular/platform-browser": "^17.3.12",
-    "@angular/platform-browser-dynamic": "^17.3.12",
-    "@angular/router": "^17.3.12",
-    "@angular/service-worker": "^17.3.12",
+    "@angular/animations": "^18.2.13",
+    "@angular/cdk": "^18.2.13",
+    "@angular/common": "^18.2.13",
+    "@angular/compiler": "^18.2.13",
+    "@angular/core": "^18.2.13",
+    "@angular/fire": "^18.0.1",
+    "@angular/forms": "^18.2.13",
+    "@angular/material": "^18.2.13",
+    "@angular/platform-browser": "^18.2.13",
+    "@angular/platform-browser-dynamic": "^18.2.13",
+    "@angular/router": "^18.2.13",
+    "@angular/service-worker": "^18.2.13",
     "dayjs": "^1.11.13",
     "firebase": "^9.4.0",
     "humanize-duration-ts": "^2.1.1",
     "ngx-material-timepicker": "^13.1.1",
-    "rxjs": "^7.4.0",
+    "rxjs": "^7.8.1",
     "tslib": "^2.0.0",
     "zone.js": "^0.14.10"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "0.1703.17",
-    "@angular-devkit/build-angular": "^17.3.17",
+    "@angular-devkit/architect": "0.1802.20",
+    "@angular-devkit/build-angular": "^18.2.20",
     "@angular-eslint/builder": "20.1.1",
     "@angular-eslint/eslint-plugin": "^20.1.1",
     "@angular-eslint/eslint-plugin-template": "20.1.1",
     "@angular-eslint/schematics": "20.1.1",
     "@angular-eslint/template-parser": "20.1.1",
-    "@angular/cli": "^17.3.17",
-    "@angular/compiler-cli": "^17.3.12",
+    "@angular/cli": "^18.2.20",
+    "@angular/compiler-cli": "^18.2.13",
     "@types/node": "^18.15.0",
     "@typescript-eslint/eslint-plugin": "7.11.0",
     "@typescript-eslint/parser": "7.11.0",
