chore: upgrade Angular dependencies to version 20.x and update related devDependencies

--- a/package.json
+++ b/package.json
@@ -16,18 +16,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.2.14",
-    "@angular/cdk": "^19.2.14",
-    "@angular/common": "^19.2.14",
-    "@angular/compiler": "^19.2.14",
-    "@angular/core": "^19.2.14",
-    "@angular/fire": "^19.0.1",
-    "@angular/forms": "^19.2.14",
-    "@angular/material": "^19.2.14",
-    "@angular/platform-browser": "^19.2.14",
-    "@angular/platform-browser-dynamic": "^19.2.14",
-    "@angular/router": "^19.2.14",
-    "@angular/service-worker": "^19.2.14",
+    "@angular/animations": "^20.0.0",
+    "@angular/cdk": "^20.0.0",
+    "@angular/common": "^20.0.0",
+    "@angular/compiler": "^20.0.0",
+    "@angular/core": "^20.0.0",
+    "@angular/fire": "^20.0.1",
+    "@angular/forms": "^20.0.0",
+    "@angular/material": "^20.0.0",
+    "@angular/platform-browser": "^20.0.0",
+    "@angular/platform-browser-dynamic": "^20.0.0",
+    "@angular/router": "^20.0.0",
+    "@angular/service-worker": "^20.0.0",
     "dayjs": "^1.11.13",
     "firebase": "^12.1.0",
     "humanize-duration-ts": "^2.1.1",
@@ -36,20 +36,20 @@
     "zone.js": "^0.15.1"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "0.1902.15",
-    "@angular-devkit/build-angular": "^19.2.15",
+    "@angular-devkit/architect": "^0.1902.15",
+    "@angular-devkit/build-angular": "^20.0.0",
     "@angular-eslint/builder": "20.1.1",
     "@angular-eslint/eslint-plugin": "^20.1.1",
     "@angular-eslint/eslint-plugin-template": "20.1.1",
     "@angular-eslint/schematics": "20.1.1",
     "@angular-eslint/template-parser": "20.1.1",
-    "@angular/cli": "^19.2.15",
-    "@angular/compiler-cli": "^19.2.14",
+    "@angular/cli": "^20.0.0",
+    "@angular/compiler-cli": "^20.0.0",
     "@types/node": "^18.15.0",
-    "@typescript-eslint/eslint-plugin": "7.11.0",
-    "@typescript-eslint/parser": "7.11.0",
-    "eslint": "8.57.1",
-    "firebase-tools": "^13.35.1",
-    "typescript": "~5.7.2"
+    "@typescript-eslint/eslint-plugin": "^7.11.0",
+    "@typescript-eslint/parser": "^7.11.0",
+    "eslint": "^8.57.1",
+    "firebase-tools": "^14.14.0",
+    "typescript": "~5.8.0"
   }
 }
