--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -1,7 +1,6 @@
 {
   "compilerOptions": {
-    "module": "CommonJS",
-    "moduleResolution": "node",
+    "module": "commonjs",
     "noImplicitReturns": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
@@ -9,6 +8,7 @@
     "sourceMap": true,
     "strict": true,
     "target": "ES2020",
+    "lib": ["ES2022"],
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
