--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -131,14 +131,23 @@ jobs:
             nx-${{ runner.os }}-
 
       - name: Build affected projects
-        run: npx nx affected --target=build --base=origin/${{ github.base_ref || 'master' }} --head=HEAD --configuration=production
+        run: |
+          if [ "${{ github.event_name }}" == "push" ] && [ "${{ github.ref }}" == "refs/heads/master" ]; then
+            # On master, build all projects to ensure bundle-size check works
+            npx nx run-many --target=build --all --configuration=production
+          else
+            # On PRs, only build affected projects
+            npx nx affected --target=build --base=origin/${{ github.base_ref || 'master' }} --head=HEAD --configuration=production
+          fi
 
       - name: Upload build artifacts
+        if: success()
         uses: actions/upload-artifact@v4
         with:
           name: build-artifacts
           path: dist/
           retention-days: 7
+          if-no-files-found: warn
 
   # Job 5: E2E tests (only on main/master push)
   e2e:
@@ -147,6 +156,8 @@ jobs:
     if: github.event_name == 'push' && (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main')
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0 # Fetch all history for Nx affected commands
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -171,10 +182,11 @@ jobs:
           path: dist/cypress/
           retention-days: 7
 
-  # Job 6: Check bundle size
+  # Job 6: Check bundle size (only on master push)
   bundle-size:
     runs-on: ubuntu-latest
     needs: build
+    if: github.event_name == 'push' && github.ref == 'refs/heads/master'
     steps:
       - uses: actions/checkout@v4
 
@@ -229,11 +241,18 @@ jobs:
     steps:
       - name: Check job statuses
         run: |
+          # Check required jobs
           if [ "${{ needs.lint.result }}" != "success" ] || \
-             [ "${{ needs.build.result }}" != "success" ] || \
-             [ "${{ needs.bundle-size.result }}" != "success" ]; then
+             [ "${{ needs.build.result }}" != "success" ]; then
             echo "❌ CI failed"
             exit 1
-          else
-            echo "✅ CI passed"
           fi
+
+          # Check bundle-size only if it ran (not skipped)
+          if [ "${{ needs.bundle-size.result }}" != "skipped" ] && \
+             [ "${{ needs.bundle-size.result }}" != "success" ]; then
+            echo "❌ CI failed (bundle-size)"
+            exit 1
+          fi
+
+          echo "✅ CI passed"
