feat: remove deprecated migration files and update README for new migration location; add Railway configuration for web and API

--- a/apps/mobile/tsconfig.app.json
+++ b/apps/mobile/tsconfig.app.json
@@ -11,9 +11,5 @@
   },
   "include": ["src/**/*.ts"],
   "exclude": ["jest.config.ts", "src/test-setup.ts", "src/**/*.test.ts", "src/**/*.spec.ts"],
-  "references": [
-    {
-      "path": "../../libs/features/auth"
-    }
-  ]
+  "references": []
 }
