--- a/apps/web/project.json
+++ b/apps/web/project.json
@@ -22,6 +22,16 @@
           {
             "glob": "**/*",
             "input": "apps/web/public"
+          },
+          {
+            "glob": "**/*",
+            "input": "apps/web/src/assets",
+            "output": "assets"
+          },
+          {
+            "glob": "manifest.json",
+            "input": "apps/web/src",
+            "output": "/"
           }
         ],
         "styles": ["apps/web/src/styles.css"],
