--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@nestjs/terminus": "^11.0.0",
     "@ng-icons/core": "^32.2.0",
     "@ng-icons/heroicons": "^32.2.0",
-    "@sentry/node": "^10.22.0",
+    "@sentry/nestjs": "^10.22.0",
     "@sentry/profiling-node": "^10.22.0",
     "@supabase/supabase-js": "^2.40.0",
     "@types/leaflet.markercluster": "^1.5.6",
@@ -69,6 +69,7 @@
     "@angular/build": "^20.0.0",
     "@angular/cli": "^20.0.0",
     "@angular/compiler-cli": "^20.0.0",
+    "@capacitor/assets": "^3.0.5",
     "@capacitor/cli": "^7.0.0",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.0",
