feat(redis): add support for Redis password configuration in connection settings

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -66,6 +66,9 @@ CORS_ORIGINS=http://localhost:4200,http://localhost:4201
 # Production: Replace with your actual domains
 # CORS_ORIGINS=https://yourdomain.com,https://www.yourdomain.com,https://app.yourdomain.com
 
+# Note: Railway (*.up.railway.app) and Vercel (*.vercel.app) preview deployments
+# are automatically allowed without needing to add them here.
+
 # ========================================
 # Monitoring & Observability (Optional)
 # ========================================
