✨ feat: enhance auth system, redesign settings UI, and improve mobile support
- Add location permission notice component with platform-specific guidance
- Redesign settings page with modern tabs and refined card styling
- Update import wizard and import history with cleaner design
- Refresh app header with glass effect and improved dropdown
- Enhance auth service with better token handling and mobile detection
- Add onboarding flow improvements with smooth animations
- Configure Capacitor for native mobile features (edge-to-edge, plugins)
- Refactor test infrastructure with Jest config and new service specs
- Add feature flags service for controlled feature rollouts
- Move notification service to data-frontend library
- Fix lint issues (unused imports, var declarations, unused deps)

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -139,3 +139,11 @@ APP_BASE_URL=http://localhost:4200
 # ENABLE_NOTIFICATIONS=true
 # ENABLE_SHARING=true
 # ENABLE_WEEKLY_SUMMARIES=false
+
+# Enable guest mode (anonymous usage without account)
+# When enabled, users can use the app without signing in (mobile only)
+ENABLE_GUEST_MODE=false
+
+# Enable magic link authentication (passwordless login via email)
+# Requires EMAIL_PROVIDER to be configured
+ENABLE_MAGIC_LINK=false
