--- a/apps/api/project.json
+++ b/apps/api/project.json
@@ -74,6 +74,15 @@
           "watch": false
         }
       }
+    },
+    "test": {
+      "executor": "@nx/jest:jest",
+      "outputs": ["{workspaceRoot}/coverage/apps/api"],
+      "options": {
+        "jestConfig": "apps/api/jest.config.ts",
+        "passWithNoTests": false,
+        "runInBand": true
+      }
     }
   }
 }
