--- a/apps/mobile/android/capacitor.settings.gradle
+++ b/apps/mobile/android/capacitor.settings.gradle
@@ -5,5 +5,8 @@ project(':capacitor-android').projectDir = new File('../../../node_modules/@capa
 include ':capacitor-geolocation'
 project(':capacitor-geolocation').projectDir = new File('../../../node_modules/@capacitor/geolocation/android')
 
+include ':capacitor-preferences'
+project(':capacitor-preferences').projectDir = new File('../../../node_modules/@capacitor/preferences/android')
+
 include ':capacitor-status-bar'
 project(':capacitor-status-bar').projectDir = new File('../../../node_modules/@capacitor/status-bar/android')
