--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,3 +1,5 @@
+name: blastoise
+
 services:
   # Redis for geospatial indexing and caching
   redis:
@@ -22,7 +24,7 @@ services:
     environment:
       POSTGRES_USER: ${POSTGRES_USER:-postgres}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
-      POSTGRES_DB: ${POSTGRES_DB:-blastoise}
+      POSTGRES_DB: ${POSTGRES_DB:-brewery_tracker}
     ports:
       - '${POSTGRES_PORT:-5432}:5432'
     volumes:
