✨ feat: enhance mobile notification and location support
- Add Capacitor Local Notifications for native push notifications
- Fix location permission detection for Android coarse/fine location
- Fix API client to use injected API_BASE_URL instead of relative path
- Add TrackingManagerService to orchestrate location tracking
- Request notification permission on first login (native only)
- Update venues API to use correct parameter names (latitude/longitude)
- Add notification permission flow in settings UI

--- a/libs/data-frontend/package.json
+++ b/libs/data-frontend/package.json
@@ -9,6 +9,8 @@
     "@blastoise/shared": "*",
     "@angular/core": "*",
     "@angular/common": "*",
+    "@capacitor/core": "*",
+    "@capacitor/local-notifications": "*",
     "rxjs": "*"
   }
 }
