--- a/package.json
+++ b/package.json
@@ -39,11 +39,13 @@
     "@angular/platform-browser-dynamic": "^20.0.0",
     "@angular/router": "^20.0.0",
     "@angular/service-worker": "^20.0.0",
+    "@capacitor-community/background-geolocation": "^1.2.26",
     "@capacitor/android": "^7.0.0",
     "@capacitor/app": "^7.1.0",
     "@capacitor/core": "^7.0.0",
     "@capacitor/geolocation": "^7.0.0",
     "@capacitor/ios": "^7.0.0",
+    "@capacitor/local-notifications": "^7.0.3",
     "@capacitor/preferences": "^7.0.2",
     "@capacitor/status-bar": "^7.0.3",
     "@nestjs/axios": "^4.0.1",
