✨ feat: add venue discovery with tiered API sources and fix test infrastructure
Add automatic venue discovery using Open Brewery DB as primary source with
OpenStreetMap fallback. Includes geo-grid caching to prevent redundant API calls.

- Add OsmDiscoveryService for OpenStreetMap Overpass API integration
- Enhance VenuesService with tiered discovery (Local DB → Cache → APIs)
- Add discovery cache with 24-hour TTL using geo-grid (~11km cells)
- Update BreweryDbVerifierService with discoverNearby method
- Fix Jest configuration across data-frontend, auth, and settings libs
- Refactor auth components to use signals and improve test setup
- Change default route from /auth/login to /visits

--- a/libs/data-frontend/package.json
+++ b/libs/data-frontend/package.json
@@ -11,6 +11,7 @@
     "@angular/common": "*",
     "@capacitor/core": "*",
     "@capacitor/local-notifications": "*",
-    "rxjs": "*"
+    "rxjs": "*",
+    "jest-preset-angular": "*"
   }
 }
