--- a/apps/mobile/ios/App/Podfile
+++ b/apps/mobile/ios/App/Podfile
@@ -14,6 +14,7 @@ def capacitor_pods
   pod 'CapacitorCommunityBackgroundGeolocation', :path => '../../../../node_modules/@capacitor-community/background-geolocation'
   pod 'CapacitorApp', :path => '../../../../node_modules/@capacitor/app'
   pod 'CapacitorGeolocation', :path => '../../../../node_modules/@capacitor/geolocation'
+  pod 'CapacitorLocalNotifications', :path => '../../../../node_modules/@capacitor/local-notifications'
   pod 'CapacitorPreferences', :path => '../../../../node_modules/@capacitor/preferences'
   pod 'CapacitorStatusBar', :path => '../../../../node_modules/@capacitor/status-bar'
 end
